# SynapticIDS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  synaptic-ids.db  test_main.http
.github/workflows/: main.yml
k8s/: deployment.yml  mlflow-deployment.yml  mlflow-service.yml  service.yml
notebooks/: DeepHybrid-IDS-Cyberattack-Classification.ipynb
scripts/: analysis.py  benchmark_branchs.py  data_loader.py  lr_scheduler.py  model_builder.py  model_trainer.py  transformer_fusion.py
src/synaptic_ids/: utils.py
src/synaptic_ids/api/: app_state.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  services.py
src/synaptic_ids/api/routers/: predictions.py
src/synaptic_ids/config/: __init__.py  defaults.yaml
src/synaptic_ids/processing/: data_loader.py  data_setup.py  feature_engineer.py
src/synaptic_ids/processing/data_transformer/: data_preparer.py  to_2d.py  to_sequence.py
src/synaptic_ids/training/: lr_scheduler.py  mlflow.Dockerfile  run_training.py
src/synaptic_ids/training/analysis/: analysis.py
src/synaptic_ids/training/model/: model_builder.py  model_trainer.py  pipeline.py  transformer_fusion.py
src/synaptic_ids/training/observers/: mlflow_observer.py  observer.py  setup_mlflow.py
terraform/: .terraform.lock.hcl  gcs.tf  main.tf  outputs.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
tests/: conftest.py
tests/api/: conftest.py  test_crud.py  test_predictions_api.py  test_services.py
tests/integration/: test_data_preparer_flow.py
tests/processing/: test_data_preparer_flow.py
tests/processing/data_transformer/: test_data_preparer.py  test_to_2d.py  test_to_sequence.py
tests/training/: test_run_training.py  test_run_training_flow.py
tests/training/observers/: test_setup_mlflow.py
(+2 files in other folders)
