[project]
name = "synapticids"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boruta>=0.4.3",
    "fastparquet>=2024.11.0",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.5",
    "mypy>=1.17.1",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "pre-commit>=4.3.0",
    "pyarrow>=21.0.0",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
]
