[project]
name = "synapticids"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.0.4",
    "boruta>=0.4.3",
    "fastapi>=0.116.1",
    "fastparquet>=2024.11.0",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.12",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.5",
    "mlflow>=3.2.0",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "pre-commit>=4.3.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "ruff>=0.12.8",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=1.4.54",
    "tensorflow>=2.19.0",
    "tf>=1.0.3",
    "uvicorn[standard]>=0.35.0",
]
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow to run"
]
